--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,7 +22,9 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
       - name: Install Dependencies
-        run: gem install "rake:>=10.4.2" "minitest:>=5.4.3" --conservative --no-document
+        run: |
+          gem install bundler:2.0.2
+          bundle install
       - name: Run Test
         run: rake test
     timeout-minutes: 15
