--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,9 +22,8 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
       - name: Install Dependencies
-        run: |
-          gem install bundler:2.0.2
-          bundle install
+        run: TEST_TOOL=rubygems util/ci.sh before_script
+        shell: bash
       - name: Run Test
         # create a symlink for git to a folder without a space, needed for CI only
         run: |
